examples/invalid/CustomAnnotationMissingParam.idl
// SPDX-License-Identifier: Apache-2.0 OR MIT
// Copyright (c) 2025-2026 naskel.com

@annotation MyAnn {
  int32_t value;
  string  name;
};

@MyAnn(value=10)
struct Foo {
  int32_t x;
};

